--- a/views/home.hbs
+++ b/views/home.hbs
@@ -4,7 +4,7 @@
     <div class="col-xl-12 stretch-card grid-margin">
       <div class="card">
         <div class="position-relative cursor-pointer" onclick="window.open('/durgapuja','_blank').focus">
-          <img src="images/dashboard/banner2.jpeg" alt="banner" class="img-fluid" />
+          <img src="images/dashboard/banner2.jpeg"  alt="banner" class="img-fluid" />
           <div class="banner-top">
           
           </div>
@@ -18,7 +18,7 @@
     <div class="col-xl-8 stretch-card grid-margin">
       {{#list global}}
       <div class="position-relative" onclick="window.location.href = '/news?category=global&id={{id}}'">
-        <img src="images/news/global/{{imageName}}" alt="banner" class="img-fluid" />
+        <img style="height: 395px;width: 1000px;" src="images/news/global/{{imageName}}" alt="banner" class="img-fluid" />
         <div class="banner-content">
           <div class="overlay">
           <!--  <div class="badge badge-danger fs-12 font-weight-bold mb-3">
