--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -31,7 +31,7 @@
 <meta name="theme-color" content="#ffffff">
 <meta name="title" content="{{pageTitleDesc}}">
 <meta name="description" content="{{metaDesc}}">
-<meta name="keywords" content="news,notheast news,northeastherald,neherald,englishnews,videos,bengali news, photos,articles,sevenstates,jobs,tender,northeastherald youtube link,northeastherald facebook link ">
+<meta name="keywords" content="northeast herald, neherald, tripura news, agartala news, kokborok music vidoes, assam news">
 <meta name="robots" content="index, follow">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="language" content="English">
