--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,5 +1,5 @@
 <div class="container">
-  <!-- Banner Top-->
+  <!-- Banner Top
   <div class="row" data-aos="fade-up">
     <div class="col-xl-12 stretch-card grid-margin">
       <div class="card">
@@ -11,7 +11,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div>-->
   <!-- End-->
   <!-- Headline Top with Latest News-->
   <div class="row" data-aos="fade-up">
